# run-tracker

./: FEATURES_SPEC.md  HEALTHKIT_SETUP.md  IOS_NOTIFICATIONS_SETUP.md  ONLINE_FEATURES_PLAN.md  SPEC.md  index.html  package-lock.json  package.json  supabase-denormalize-active-plans.sql  supabase-fix-active-plans-rls.sql  supabase-fix-comments-rls.sql  supabase-migrate-runs-to-datetime.sql  supabase-schema.sql
.github/workflows/: deploy-testflight.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Sources/: HealthKitBridge.swift
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/contexts/: AuthContext.tsx  DatabaseContext.tsx  PlanContext.tsx  SettingsContext.tsx  ToastContext.tsx
src/hooks/: useDailyTrainingReminder.ts
src/screens/: AuthScreen.tsx  CalendarScreen.tsx  CommunityPlanDetailScreen.tsx  CommunityScreen.tsx  DashboardScreen.tsx  FindFriendsScreen.tsx  FriendProfileScreen.tsx  GoalsScreen.tsx  LiveRunScreen.tsx  LogEntryScreen.tsx  LogRunScreen.tsx  MyPlansScreen.tsx  OnboardingScreen.tsx  PlanDetailScreen.tsx  PlanEditorScreen.tsx  ProfileScreen.tsx  RunDetailScreen.tsx  SettingsScreen.tsx  SharePlanScreen.tsx  SocialScreen.tsx  StatsScreen.tsx
src/services/: backupService.ts  communityService.ts  database.ts  goalService.ts  healthkitService.ts  planService.ts  runService.ts  settingsService.ts  socialService.ts  statsService.ts  supabaseClient.ts  syncService.ts
src/types/: index.ts
src/utils/: calculateStatsFromRuns.ts  dateUtils.ts  generateId.ts  paceUtils.ts  planSeedData.ts  workoutUtils.ts  (+1 more)
(+37 files in other folders)
