[package]
name = "run-with-friends"
version = "0.3.3"
description = "Run With Friends - Training Plan & Run Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "run_with_friends_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
